--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -1,7 +1,7 @@
-- var header_link_twitter  = "#twitter"
-- var header_link_telegram = "#tg"
-- var header_link_btc      = "#btc"
-- var header_link_github   = "#github"
+- var header_link_twitter  = "https://twitter.com/@FluenceAI"
+- var header_link_telegram = "https://t.me/FluenceAI"
+- var header_link_btc      = "https://bitcointalk.org/index.php?topic=2744525"
+- var header_link_github   = "https://github.com/FluenceLabs"
 
 .header-main
     h1 Build&nbsp;new,
