--- a/assets/templates/blocks/top.pug
+++ b/assets/templates/blocks/top.pug
@@ -1,7 +1,7 @@
-- var link_top_whitepaper = "#whitepaper"
-- var link_top_github     = "#github"
-- var link_top_about      = "about.html"
-- var link_top_github     = "#github"
+- var link_top_whitepaper = "https://tokensale.fluence.ai"
+- var link_top_github     = "https://github.com/FluenceLabs"
+- var link_top_about      = "/about.html"
+- var link_top_blog     = "https://blog.fluence.ai"
 
 .top-wrapper
     .top-logo
@@ -14,10 +14,10 @@
                 include ../../img/hamburger.inline.svg
 
             ul
-                li: a(href=link_top_whitepaper) whitepaper
+                li: a(href=link_top_whitepaper) tokensale
                 li: a(href=link_top_github) github
                 li: a(href=link_top_about) about
-                li: a(href=link_top_github) blog
+                li: a(href=link_top_blog) blog
 
     .top-menu-caller
         a.__menuopen(href="#")
