--- a/assets/templates/blocks/footer.pug
+++ b/assets/templates/blocks/footer.pug
@@ -1,10 +1,10 @@
 - var footer_link_terms      = "#terms"
-- var footer_link_github     = "#github"
+- var footer_link_github     = "https://github.com/FluenceLabs"
 - var footer_link_policy     = "#policy"
-- var footer_link_demo       = "#demo"
+- var footer_link_demo       = "https://github.com/FluenceLabs"
 - var footer_link_about      = "/about.html"
-- var footer_link_whitepaper = "#whitepaper"
-- var footer_link_blog       = "#blog"
+- var footer_link_whitepaper = "http://static.fluence.ai/Tech_Whitepaper.pdf"
+- var footer_link_blog       = "https://blog.fluence.ai/"
 
 .footer-logo
     a(href="/")
