--- a/assets/templates/index.pug
+++ b/assets/templates/index.pug
@@ -3,7 +3,7 @@ extends layout/layout
 include layout/block
 
 block local_vars
-    - var page_title = "Fluence - decentralized database"
+    - var page_title = "Fluence - decentralized database network"
 
 //- page content
 block content
