--- a/assets/templates/blocks/images.pug
+++ b/assets/templates/blocks/images.pug
@@ -1,6 +1,6 @@
 - var link = "#whitepaper"
 
-h2 How Fluence helps with this shit
+h2 How Fluence solves these issues? 
 
 .images-desktop-image
     include ../../img/big-image-all.svg
@@ -10,17 +10,17 @@ ul
         .image.image-left
             include ../../img/big_image-1.inline.svg
 
-        p Each data piece is encrypted on a client and spread through the network
+        p  Data sent into Fluence is encrypted with your private key and split into several replicas stored on independent nodes. Only you have the access and control over it.
     li
         .image.image-center
             include ../../img/big_image-2.inline.svg
 
-        p Nodes keep data while somebody pays for it and guarantee that data is there
+        p Fluence protocol ensures the network is always online and you can access your data anytime.
     li
         .image.image-right
             include ../../img/big_image-3.inline.svg
 
-        p When client requests for a data, network routes to a particular node and gives the data back
+        p Since the nodes are independent and spread over the world no third party can read, edit, corrupt or prevent access to the data you put in Fluence.
 
 .images-bottom
-    a.button.button-accent(href=link) Read the whitepaper
+    a.button.button-accent(href=link) Discover the whitepaper
