--- a/assets/templates/blocks/additional.pug
+++ b/assets/templates/blocks/additional.pug
@@ -2,7 +2,7 @@
 
 .additional-text
     h2 Mine Fluence. Run a node.
-    p To secure the network, anybody will be able to run a node and get rewarded by tokens for data storage.
+    p Anybody can run a Fluence network node and get rewarded with tokens not only for data storage,<br/> but also for providing other useful work for the network.
 
     .additional-text-button
         a.button.button-accent(href=button_link) Join the network
