--- a/assets/templates/blocks/squares.pug
+++ b/assets/templates/blocks/squares.pug
@@ -13,24 +13,24 @@ h2.__polyfill(data-supports="textStroke") Internet today
     +squareblock(
         '1',
         'Data centralization',
-        'Most of the world’s data sit in relatively few locations controlled by a small group of providers.',
-        'Cryptographically impossible to break the whole dataset. All the data is encrypted on a client with user\'s private key.'
+        'Most of the world\’s data sits in relatively few locations controlled by a selected group of providers.',
+        'Data ownership and control over access rights belongs to the user who created it. Data storage, management and processing services compete over an open market.'
     )
     +squareblock(
         '2',
         'Data leaks',
-        'Centralized clouds leads to data leaks and companies don\'t care.',
-        'Cryptographically impossible to break the whole dataset. All the data is encrypted on a client with user\'s private key.'
+        'Centralized clouds are vulnerable, but signigicant leaks of sensitive data lead only to media buzz with no long term changes or consewuences for the faulty providers.',
+        'Datasets are cryptographically protected and impossible to break. No central point of falure meaning one compromised server is unable to open access to the whole database dump.'
     )
     +squareblock(
         '3',
         'Censorship and regulations',
-        'Governments have full control under personal and sensitive data through ...',
-        'Cryptographically impossible to break the whole dataset. All the data is encrypted on a client with user\'s private key.'
+        'Governments and large corporations have full control over personal data and internet access.',
+        'Data is encryped and spread across different servers under  no single authority. It is impossible to ban or use against its owner.'
     )
     +squareblock(
         '4',
         'Fragmentation and regulations',
-        'Modern internet doesn\'t simply work without access to centralized clouds, dns, cdn, etc.',
-        'Cryptographically impossible to break the whole dataset. All the data is encrypted on a client with user\'s private key.'
+        'Modern internet architecture is dependent on centralized clouds, dns, cdn, etc.',
+        'Web 3.0 is design to be  self sustainable and capable of working even with its significant part malfunctions or gets sabotaged.'
     )
