--- a/assets/templates/blocks/subscribe.pug
+++ b/assets/templates/blocks/subscribe.pug
@@ -1,7 +1,7 @@
-- var link_twitter  = "#twitter"
-- var link_telegram = "#tg"
-- var link_btc      = "#btc"
-- var link_github   = "#github"
+- var link_twitter  = "https://twitter.com/@FluenceAI"
+- var link_telegram = "https://t.me/FluenceAI"
+- var link_btc      = "https://bitcointalk.org/index.php?topic=2744525"
+- var link_github   = "https://github.com/FluenceLabs"
 
 h2 Keep an eye on Fluence
 
