--- a/assets/templates/blocks/squares_small.pug
+++ b/assets/templates/blocks/squares_small.pug
@@ -25,33 +25,33 @@ mixin sqblock(icon, title, description)
         p #{description}
 
 h2 Build on Fluence
-p Apps, that can be built<br/>using decentralized databases.
+p Our network is best for
 
 .squares_small-blocks
     +sqblock(
         'earth',
         'Unstoppable content',
-        'Build a new Wikileaks or end-to-end encrypted messenger like Telegram'
+        'A Wikileaks alike web-site or end-to-end encrypted messenger.'
     )
     +sqblock(
         'chain',
         'Patient records',
-        'Secure medicine data storage and sharing'
+        'Secure medical data storage and sharing.'
     )
     +sqblock(
         'molecule',
         'Decentralized insurance',
-        'Escape all the pain about regulated personal data'
+        'No more pain with digital personal data regulations.'
     )
     +sqblock(
         'cart',
         'Data marketplaces',
-        'Store any personal or sensitive data and build economy around'
+        'Store any personal or sensitive data and build a market around it.'
     )
     +sqblock(
         'lists',
         'Big data',
-        'Unlimited scale for any dataset size'
+        'No dataset is too big, no amount of requests is too much.'
     )
     .item.item__last
         p.item-title Already with us
