--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -5,8 +5,8 @@
 
 .header-main
     h1 Build&nbsp;new,
-        span  privacy&#8209;protecting applications
-    p Fluence is a decentralized encrypted database service, which allows to store, manage and monetize any data.
+        span  applications&#8209;for the Web 3.0
+    p Fluence enables a network of independent nodes that provide a decentralized encrypted database service.<br/>This kind of database design has outstanding capabilities for storage, management and monetization of structured data.<br/>These features find their application in a wide variety of industries, businesses, and social governance initiatives.
 
 .header-buttons
     a.button(href="#") Try out a demo
