--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -9,8 +9,10 @@ mixin person(icon, name, status)
             block
 
 
-h2 Small and daring team
-p We are believe that new technology epoch began, and we are at the forefront of this epoch. We know that small and daring teams with particular goals and sense of market can make revolution faster.
+h2 Fluence Labs: mission and origins
+p Fluence Labs was created to develop a decentralized network technology that capable of doing what cloud providers couldn't. We believe that decentralized data storage is a crucial part of the tomorrow's web and will benefit the  humanity by providing a new level of privacy, control, and security.<br/>Behind this project and vision is a dedicated group of people with experience and a dream.
+
+
 
 .persons-list
     +person(
