--- a/assets/templates/blocks/additional.pug
+++ b/assets/templates/blocks/additional.pug
@@ -1,4 +1,4 @@
-- var button_link = "#link"
+- var button_link = "https://docs.google.com/forms/d/e/1FAIpQLSfNt5xbHpaPAQ7ouDzD9Nlz79UrlHZfWY1YLEY4fA6cNmfRfA/viewform"
 
 .additional-text
     h2 Mine Fluence. Run a node.
