--- a/assets/templates/blocks/squares.pug
+++ b/assets/templates/blocks/squares.pug
@@ -20,7 +20,7 @@ h2.__polyfill(data-supports="textStroke") Internet today
         '2',
         'Data leaks',
         'Centralized clouds are vulnerable, but signigicant leaks of sensitive data lead only to media buzz with no long term changes or consewuences for the faulty providers.',
-        'Datasets are cryptographically protected and impossible to break. No central point of falure meaning one compromised server is unable to open access to the whole database dump.'
+        'Datasets are cryptographically protected and impossible to break. One compromised server is unable to open access to the whole database dump.'
     )
     +squareblock(
         '3',
