--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -42,70 +42,26 @@ p Fluence Labs was created to develop a decentralized network technology that ca
             a(href="#") LinkedIn
             a(href="#")  Github
 
-    +person(
-        '_tmp_person2.png',
-        'Dmitry Kurinsky',
-        'CTO'
-    )
-        p Software engineer and technical leader, building complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
-
-        p
-            a(href="#") LinkedIn
-            a(href="#")  Github
-
-    +person(
-        '_tmp_person1.png',
-        'Evgeny Ponomarev',
-        'CEO'
-    )
-        p Entrepreneur and product manager. Worked on product at
-            a(href="#")  2GIS
-            |  (20M monthly audience). In charge of the project management track at
-            a(href="#")  CodeFest
-            |  developers conference (1500+ attendees / year). Mined first Bitcoin in
-            a(href="#")  2011
-            |  on CPU.
-
-        p
-            a(href="#") LinkedIn
-
-h2 With powerfull help
+//h2 With powerfull help
 
 .persons-list
     +person(
         '_tmp_person1.png',
-        'Evgeny Ponomarev',
-        'CEO'
+        'Constantine Solovev',
+        'Database Development'
     )
-        p Entrepreneur and product manager. Worked on product at
-            a(href="#")  2GIS
-            |  (20M monthly audience). In charge of the project management track at
-            a(href="#")  CodeFest
-            |  developers conference (1500+ attendees / year). Mined first Bitcoin in
-            a(href="#")  2011
-            |  on CPU.
+        p Seasoned software engineer with experience in distributed systems and big data processing. At CleverDATA he developed a highly loaded data exchange platform for RTB advertising.
 
         p
-            a(href="#") LinkedIn
+            a(href="https://github.com/RicoGit") GitHub
 
     +person(
         '_tmp_person2.png',
-        'Dmitry Kurinsky',
-        'CTO'
+        'Artemiy Liarskiy',
+        'Dev Relations'
     )
-        p Software engineer and technical leader, building complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
+        p Digital copywriter for several major brands and rewarded agencies. Background in sales & marketing for enterprise and mobile app development.
 
         p
             a(href="#") LinkedIn
-            a(href="#")  Github
-
-    +person(
-        '_tmp_person2.png',
-        'Dmitry Kurinsky',
-        'CTO'
-    )
-        p Software engineer and technical leader, building complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
-
-        p
-            a(href="#") LinkedIn
-            a(href="#")  Github
+         
