--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -9,7 +9,7 @@
     p Fluence enables a network of independent nodes that provide a decentralized encrypted database service.<br/>This kind of database design has outstanding capabilities for storage, management and monetization of structured data.<br/>These features find their application in a wide variety of industries, businesses, and social governance initiatives.
 
 .header-buttons
-    a.button(href="#") Try out a demo
+    a.button(href="https://github.com/FluenceLabs") Try out a demo
 
     ul
         li: a(href=header_link_twitter)
