--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -6,7 +6,7 @@
 .header-main
     h1 Build&nbsp;new
         span  applications&#8209;for the Web 3.0
-    p Fluence enables a network of independent nodes that provide a decentralized encrypted database service.<br/>This kind of database design has outstanding capabilities for storage, management and monetization of structured data.<br/>These features find their application in a wide variety of industries, businesses, and social governance initiatives.
+    p Fluence enables a network of independent nodes that provide a decentralized encrypted database service.<br/>This kind of database design has outstanding capabilities for storage, management and monetization of structured data. These features can find their application in a wide variety of industries, businesses, and social governance initiatives.
 
 .header-buttons
     a.button(href="https://github.com/FluenceLabs") Try out a demo
