--- a/assets/templates/blocks/squares.pug
+++ b/assets/templates/blocks/squares.pug
@@ -14,13 +14,13 @@ h2.__polyfill(data-supports="textStroke") Internet today
         '1',
         'Data centralization',
         'Most of the world\’s data sits in relatively few locations controlled by a selected group of providers.',
-        'Data ownership and control over access rights belongs to the user who created it. Data storage, management and processing services compete over an open market.'
+        'Data ownership and control over access rights belong to the user. Storage, management and processing services compete over an open market.'
     )
     +squareblock(
         '2',
         'Data leaks',
-        'Centralized clouds are vulnerable, but signigicant leaks of sensitive data lead only to media buzz with no long term changes or consewuences for the faulty providers.',
-        'Datasets are cryptographically protected and impossible to break. One compromised server is unable to open access to the whole database dump.'
+        'Centralized clouds are vulnerable, but signigicant leaks of sensitive data lead only to media buzz with no long term changes.',
+        'Datasets are cryptographically protected and impossible to break. No database dump through a single access point.'
     )
     +squareblock(
         '3',
