--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -16,7 +16,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
 
 .persons-list
     +person(
-        '_tmp_person1.png',
+        'e_ponomarev.jpg',
         'Evgeny Ponomarev',
         'CEO'
     )
@@ -29,7 +29,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
             |  on CPU.
 
         p
-            a(href="#") LinkedIn
+            a(href="https://www.linkedin.com/in/evgeny-ponomarev-4ab3672a/") LinkedIn
 
     +person(
         '_tmp_person2.png',
@@ -39,14 +39,26 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         p Software engineer and technical leader, building complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
 
         p
-            a(href="#") LinkedIn
-            a(href="#")  Github
+            a(href="https://www.linkedin.com/in/dmitrykurinskiy/") LinkedIn
+            a(href="https://github.com/alari")  Github
+    
+    +person(
+        'a_demidko.jpg',
+        'Alexander Demidko',
+        'Research'
+    )
+        p Experienced distributed systems engineer with deep understanding of computer science, game theory and recent interest in machine learning. At Metamarkets he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. 
+
+        p
+            a(href="https://www.linkedin.com/in/alexanderdemidko/") LinkedIn
+            a(href="https://github.com/xdralex")  Github
+
 
 //h2 With powerfull help
 
 .persons-list
     +person(
-        '_tmp_person1.png',
+        'rico.jpg',
         'Constantine Solovev',
         'Database Development'
     )
@@ -56,12 +68,12 @@ p Fluence Labs was created to develop a decentralized network technology that ca
             a(href="https://github.com/RicoGit") GitHub
 
     +person(
-        '_tmp_person2.png',
+        'a_rtemiy.jpg',
         'Artemiy Liarskiy',
         'Dev Relations'
     )
         p Digital copywriter for several major brands and rewarded agencies. Background in sales & marketing for enterprise and mobile app development.
 
         p
-            a(href="#") LinkedIn
+            a(href="https://www.linkedin.com/in/orchimada/") LinkedIn
          
