--- a/assets/templates/blocks/squares_small.pug
+++ b/assets/templates/blocks/squares_small.pug
@@ -53,7 +53,7 @@ p Our network is best for
         'Big data',
         'No dataset is too big, no amount of requests is too much.'
     )
-    .item.item__last
+    //.item.item__last
         p.item-title Already with us
         include ../../img/squareblock.logos.inline.svg
 
