--- a/assets/templates/blocks/images.pug
+++ b/assets/templates/blocks/images.pug
@@ -10,7 +10,7 @@ ul
         .image.image-left
             include ../../img/big_image-1.inline.svg
 
-        p  Data sent into Fluence is encrypted with your private key and split into several replicas stored on independent nodes. Only you have the access and control over it.
+        p  Your data is encrypted and split into several replicas stored on independent nodes.
     li
         .image.image-center
             include ../../img/big_image-2.inline.svg
@@ -20,7 +20,7 @@ ul
         .image.image-right
             include ../../img/big_image-3.inline.svg
 
-        p Since the nodes are independent and spread over the world no third party can read, edit, corrupt or prevent access to the data you put in Fluence.
+        p The nodes are independent and spread over the world. Only you can access your data.
 
 .images-bottom
     a.button.button-accent(href=link) Discover the whitepaper
