--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -65,6 +65,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         p Seasoned software engineer with experience in distributed systems and big data processing. At CleverDATA he developed a highly loaded data exchange platform for RTB advertising.
 
         p
+            a(href="https://www.linkedin.com/in/constantine-solovev-6268ba99/") LinkedIn
             a(href="https://github.com/RicoGit") GitHub
 
     +person(
