--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -47,7 +47,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         'Alexander Demidko',
         'Research'
     )
-        p Experienced distributed systems engineer with deep understanding of computer science, game theory and recent interest in machine learning. At Metamarkets he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. 
+        p Experienced distributed systems engineer with deep understanding of computer science, game theory and certain interest in machine learning. At Metamarkets he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. At Stitch Fix, he worked on building the ML infrastructure.
 
         p
             a(href="https://www.linkedin.com/in/alexanderdemidko/") LinkedIn
@@ -60,7 +60,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
     +person(
         'rico.jpg',
         'Constantine Solovev',
-        'Database Development'
+        'Development'
     )
         p Seasoned software engineer with experience in distributed systems and big data processing. At CleverDATA he developed a highly loaded data exchange platform for RTB advertising.
 
