--- a/assets/templates/blocks/additional.pug
+++ b/assets/templates/blocks/additional.pug
@@ -2,7 +2,7 @@
 
 .additional-text
     h2 Mine Fluence. Run a node.
-    p Anybody can run a Fluence network node<br/>get rewarded with tokens not only for data storage,<br/> but also for providing other useful work for the network.
+    p Anybody can run a Fluence network node<br/>get rewarded with tokens not only for data <br/>storage, but also for providing other useful work<br/> for the network.
 
     .additional-text-button
         a.button.button-accent(href=button_link) Join the network
