--- a/assets/templates/blocks/squares.pug
+++ b/assets/templates/blocks/squares.pug
@@ -31,6 +31,6 @@ h2.__polyfill(data-supports="textStroke") Internet today
     +squareblock(
         '4',
         'Fragmentation and regulations',
-        'Modern internet architecture is dependent on centralized clouds, dns, cdn, etc.',
+        'Modern internet architecture is dependent on centralized clouds, DNS, CDN, etc.',
         'Web 3.0 is design to be  self sustainable and capable of working even with its significant part malfunctions or gets sabotaged.'
     )
