--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -9,7 +9,7 @@
     p Fluence is a network of independent nodes that provide a decentralized encrypted database service. You can use it to safely store private, medical, or any other type of structured data.
 
 .header-buttons
-    a.button(href="https://github.com/FluenceLabs") Try out a demo
+    a.button(href="https://github.com/fluencelabs/fluence") Check out the code
 
     ul
         li: a(href=header_link_twitter)
