--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -4,9 +4,9 @@
 - var header_link_github   = "https://github.com/FluenceLabs"
 
 .header-main
-    h1 Build&nbsp;new
-        span  applications&#8209;for the Web 3.0
-    p Fluence is a network of independent nodes that provide a decentralized encrypted database service. You can use it to safely store private, medical, or any other type of structured data.
+    h1 Unstoppable data&nbsp;storage
+        span  for Web&nbsp;3.0 applications
+    p Fluence is a network of independent nodes that provide a decentralized, end-to-end encrypted database service. Scalable, reliable and secured by blockchain.
 
 .header-buttons
     a.button(href="https://github.com/fluencelabs/fluence") Try out
