--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -10,7 +10,7 @@ mixin person(icon, name, status)
 
 
 h2 Fluence Labs: mission and origins
-p Fluence Labs was created to develop a decentralized network technology that capable of doing what cloud providers couldn't. We believe that decentralized data storage is a crucial part of the tomorrow's web and will benefit the  humanity by providing a new level of privacy, control, and security.<br/>Behind this project and vision is a dedicated group of people with experience and a dream.
+p Fluence Labs was created to develop a decentralized network technology.<br/>We believe that decentralized data storage is a crucial part of the tomorrow's web and will benefit the humanity by providing a new level of privacy, control, and security.<br/>Behind this project and vision is a dedicated group of people with experience and a dream.
 
 
 
@@ -20,11 +20,11 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         'Evgeny Ponomarev',
         'CEO'
     )
-        p Entrepreneur and product manager. Worked on product at
+        p Entrepreneur and product manager.<br/> Worked on product at
             a(href="#")  2GIS
-            |  (20M monthly audience). In charge of the project management track at
+            |  (20M monthly audience). <br/>In charge of the project management track at
             a(href="#")  CodeFest
-            |  developers conference (1500+ attendees / year). Mined first Bitcoin in
+            |  developers conference (1500+ attendees / year).<br/>Mined first Bitcoin in
             a(href="#")  2011
             |  on CPU.
 
@@ -36,7 +36,7 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         'Dmitry Kurinsky',
         'CTO'
     )
-        p Software engineer and technical leader, building complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
+        p Software engineer and technical leader,<br/>with solid expertise in complex engineering projects since 2004.<br/>Keen functional programming advocate.
 
         p
             a(href="https://www.linkedin.com/in/dmitrykurinskiy/") LinkedIn
@@ -47,14 +47,11 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         'Alexander Demidko',
         'Research'
     )
-        p Experienced distributed systems engineer with deep understanding of computer science, game theory and certain interest in machine learning. At Metamarkets he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. At Stitch Fix, he worked on building the ML infrastructure.
+        p Distributed systems engineer<br/>with deep understanding of computer science, game theory<br/>and machine learning.<br/>Built a petabyte scale analytics platform<br/>capable of processing hundreds of billions events per day at Metamarkets.<br/> Worked on building the ML infrastructure<br/>at Stitch Fix.
 
         p
             a(href="https://www.linkedin.com/in/alexanderdemidko/") LinkedIn
             a(href="https://github.com/xdralex")  Github
-
-
-//h2 With powerfull help
 
 .persons-list
     +person(
@@ -62,19 +59,40 @@ p Fluence Labs was created to develop a decentralized network technology that ca
         'Constantine Solovev',
         'Development'
     )
-        p Seasoned software engineer with experience in distributed systems and big data processing. At CleverDATA he developed a highly loaded data exchange platform for RTB advertising.
+        p Software engineer<br/>proficient in distributed systems<br/>and big data processing.<br/>Developed a high load<br/>data exchange platform<br/>for RTB advertising at CleverDATA.
 
         p
             a(href="https://www.linkedin.com/in/constantine-solovev-6268ba99/") LinkedIn
-            a(href="https://github.com/RicoGit") GitHub
+            a(href="https://github.com/RicoGit")  GitHub
 
     +person(
         'a_rtemiy.jpg',
         'Artemiy Liarskiy',
         'Dev Relations'
     )
-        p Digital copywriter for several major brands and rewarded agencies. Background in sales & marketing for enterprise and mobile app development.
+        p Digital marketing specialist<br/>with projects for major brands<br/>and rewarded agencies.<br/> Background in B2B sales, marketing, <br/>and copywriting.
 
         p
             a(href="https://www.linkedin.com/in/orchimada/") LinkedIn
-         
+
+h2 With the help of       
+.persons-list
+    +person(
+        'gordon.jpeg',
+        'Gordon Hall',
+        'Advisor'
+    )
+        p Distributed systems hacker and free software activist.<br/>Author of the core libraries behind Storj, ORC,<br/> as well as their underlying implementation<br/>of the Kademlia distributed hash table.
+        
+        p
+            a(href="https://github.com/bookchin") GitHub
+            
+  +person(
+        'nhan.jpg',
+        'Nhan Phan',
+        'Advisor'
+    )
+        p VP of Engineering at Metamarkets.<br/>Manages a distributed team of engineers building<br/>a highly scalable and reliable analytics platform.<br/>Previously, a VPE at iSocket<br/>(acquired by Rubicon Project in 2014).
+        
+        p
+            a(href="https://www.linkedin.com/in/nhan-phan-a20a348/") LinkedIn
