--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -21,12 +21,10 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'CEO'
     )
         p Entrepreneur and product manager.<br/> Worked on product at
-            a(href="#")  2GIS
+            a(href="https://2gis.ru/")  2GIS
             |  (20M monthly audience). <br/>In charge of the project management track at
-            a(href="#")  CodeFest
-            |  developers conference (1500+ attendees / year).<br/>Mined first Bitcoin in
-            a(href="#")  2011
-            |  on CPU.
+            a(href="https://2018.codefest.ru/speakers/en/")  CodeFest
+            |  developers conference (1500+ attendees / year).<br/>Mined first Bitcoin in 2011 on CPU.
 
         p
             a(href="https://www.linkedin.com/in/evgeny-ponomarev-4ab3672a/") LinkedIn
@@ -47,7 +45,9 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Alexander Demidko',
         'Research'
     )
-        p Distributed systems engineer<br/>with deep understanding of computer science, game theory<br/>and machine learning.<br/>Built a petabyte scale analytics platform<br/>capable of processing hundreds of billions events per day at Metamarkets.<br/> Worked on building the ML infrastructure<br/>at Stitch Fix.
+        p Distributed systems engineer<br/>with deep understanding of computer science, game theory<br/>and machine learning.<br/>Built a petabyte scale analytics platform<br/>capable of processing hundreds of billions events per day at 
+            a(href="https://metamarkets.com/")  Metamarkets.
+            |  <br/> Worked on building the ML infrastructure<br/>at Stitch Fix.
 
         p
             a(href="https://www.linkedin.com/in/alexanderdemidko/") LinkedIn
@@ -92,7 +92,9 @@ h2 With the help of
         'Nhan Phan',
         'Advisor'
     )
-        p VP of Engineering at Metamarkets.<br/>Manages a distributed team of engineers building<br/>a highly scalable and reliable analytics platform.<br/>Previously, a VPE at iSocket<br/>(acquired by Rubicon Project in 2014).
+        p VP of Engineering at 
+            a(href="https://metamarkets.com/")  Metamarkets.
+            |  <br/>Manages a distributed team of engineers building<br/>a highly scalable and reliable analytics platform.<br/>Previously, a VPE at iSocket<br/>(acquired by Rubicon Project in 2014).
         
         p
             a(href="https://www.linkedin.com/in/nhan-phan-a20a348/") LinkedIn
