--- a/assets/templates/blocks/subscribe.pug
+++ b/assets/templates/blocks/subscribe.pug
@@ -1,5 +1,5 @@
 - var link_twitter  = "https://twitter.com/@FluenceAI"
-- var link_telegram = "https://t.me/FluenceAI"
+- var link_telegram = "https://t.me/joinchat/AAEssEJVYu-7YvRc0XNZaQ"
 - var link_btc      = "https://bitcointalk.org/index.php?topic=2744525"
 - var link_github   = "https://github.com/FluenceLabs"
 
