--- a/assets/templates/blocks/header.pug
+++ b/assets/templates/blocks/header.pug
@@ -10,6 +10,11 @@
 
 .header-buttons
     a.button(href="https://github.com/fluencelabs/fluence") Try out
+    a.button(href=header_link_telegram)
+        span.icon
+            include ../../img/social-tg.inline.svg
+
+        | Join Telegram
 
     ul
         li: a(href=header_link_twitter)
