--- a/assets/templates/blocks/persons.pug
+++ b/assets/templates/blocks/persons.pug
@@ -10,7 +10,7 @@ mixin person(icon, name, status)
 
 
 h2 Fluence Labs: mission and origins
-p Fluence Labs was created to develop a decentralized network technology.<br/>We believe that decentralized data storage is a crucial part of the tomorrow's web and will benefit the humanity by providing a new level of privacy, control, and security.<br/>Behind this project and vision is a dedicated group of people with experience and a dream.
+p Fluence Labs was created to build a decentralized network technology.<br/>We believe that decentralized data storage is a crucial part<br/> of the tomorrow's web and will benefit the humanity by providing<br/> a new level of privacy, control, and security. Behind this project<br/> and vision is a dedicated group of people with experience and a dream.
 
 
 
@@ -20,11 +20,11 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Evgeny Ponomarev',
         'CEO'
     )
-        p Entrepreneur and product manager.<br/> Worked on product at
+        p Entrepreneur and product manager. Worked on product<br/> at
             a(href="https://2gis.ru/")  2GIS
-            |  (20M monthly audience). <br/>In charge of the project management track at
+            |  (20M monthly audience). In charge of the project management track at
             a(href="https://2018.codefest.ru/speakers/en/")  CodeFest
-            |  developers conference (1500+ attendees / year).<br/>Mined first Bitcoin in 2011 on CPU.
+            |  developers conference (1500+ attendees / year). Mined first Bitcoin in 2011 on CPU.
 
         p
             a(href="https://www.linkedin.com/in/evgeny-ponomarev-4ab3672a/") LinkedIn
@@ -34,7 +34,7 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Dmitry Kurinsky',
         'CTO'
     )
-        p Software engineer and technical leader,<br/>with solid expertise in complex engineering projects since 2004.<br/>Keen functional programming advocate.
+        p Software engineer and technical leader, with solid expertise<br/> in complex engineering projects since 2004. Keen functional programming advocate. Prior to Fluence he was a CTO / lead engineer at a bunch of technology startups.
 
         p
             a(href="https://www.linkedin.com/in/dmitrykurinskiy/") LinkedIn
@@ -45,9 +45,11 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Alexander Demidko',
         'Research'
     )
-        p Distributed systems engineer<br/>with deep understanding of computer science, game theory<br/>and machine learning.<br/>Built a petabyte scale analytics platform<br/>capable of processing hundreds of billions events per day at 
-            a(href="https://metamarkets.com/")  Metamarkets.
-            |  <br/> Worked on building the ML infrastructure<br/>at Stitch Fix.
+        p Experienced distributed systems engineer with deep understanding of computer science and game theory. At 
+            a(href="https://metamarkets.com/")  Metamarkets
+            |  he built a petabyte scale analytics platform capable of processing hundreds of billions events / day. At 
+            a(href="https://www.stitchfix.com")  Stitch Fix,
+            |  he worked on building the ML infrastructure.
 
         p
             a(href="https://www.linkedin.com/in/alexanderdemidko/") LinkedIn
@@ -59,7 +61,7 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Constantine Solovev',
         'Development'
     )
-        p Software engineer<br/>proficient in distributed systems<br/>and big data processing.<br/>Developed a high load<br/>data exchange platform<br/>for RTB advertising at CleverDATA.
+        p Software engineer proficient<br/> in distributed systems<br/>and big data processing.<br/>Developed a high load data exchange platform for RTB advertising at CleverDATA.
 
         p
             a(href="https://www.linkedin.com/in/constantine-solovev-6268ba99/") LinkedIn
@@ -70,31 +72,33 @@ p Fluence Labs was created to develop a decentralized network technology.<br/>We
         'Artemiy Liarskiy',
         'Dev Relations'
     )
-        p Digital marketing specialist<br/>with projects for major brands<br/>and rewarded agencies.<br/> Background in B2B sales, marketing, <br/>and copywriting.
+        p Digital marketing specialist<br/>with projects for major brands<br/>and rewarded agencies.<br/> Background in B2B sales, marketing, and copywriting.
 
         p
             a(href="https://www.linkedin.com/in/orchimada/") LinkedIn
 
-h2 With the help of       
+h2 Advisors
 .persons-list
     +person(
-        'gordon.jpeg',
-        'Gordon Hall',
-        'Advisor'
-    )
-        p Distributed systems hacker and free software activist.<br/>Author of the core libraries behind Storj, ORC,<br/> as well as their underlying implementation<br/>of the Kademlia distributed hash table.
-        
-        p
-            a(href="https://github.com/bookchin") GitHub
-            
-  +person(
         'nhan.jpg',
         'Nhan Phan',
-        'Advisor'
+        'Snapchat'
     )
-        p VP of Engineering at 
-            a(href="https://metamarkets.com/")  Metamarkets.
-            |  <br/>Manages a distributed team of engineers building<br/>a highly scalable and reliable analytics platform.<br/>Previously, a VPE at iSocket<br/>(acquired by Rubicon Project in 2014).
+        p Engineering manager at Analytics division at 
+            a(href="https://www.snapchat.com")  Snapchat.
+            |  Previously he was a VP of Engineering at 
+            a(href="https://metamarkets.com/") Metamarkets,
+            |  where he managed a distributed team of engineers building<br/> a highly scalable and reliable analytics platform. Before Metamarkets, he was a VPE<br/> at iSocket, which was acquired by Rubicon Project in 2014.
         
         p
             a(href="https://www.linkedin.com/in/nhan-phan-a20a348/") LinkedIn
+
+    +person(
+        'gordon.jpeg',
+        'Gordon Hall',
+        'Orc network, ex-Storj'
+    )
+        p "Bookchin". Distributed systems hacker and free software activist. He is the author<br/> of the core libraries that drive Storj, ORC, as well as their underlying implementation of the Kademlia distributed hash table.
+        
+        p
+            a(href="https://github.com/bookchin") GitHub
